# iktxy-backend-demo

./: .gitignore  README.md  env_setup.sh  pyproject.toml  pyrightconfig.json  requirements.txt
dev_docs/: python_package_management.md
docs/: ruff_setup.md
scripts/init/: db_creation.py  db_init.py
specs/csv/: holly_houses.csv  participate_records.csv  programs.csv  users.csv
specs/db/: struct.sql
src/base/: path.py
src/base/constants/: __init__.py  main.py  path.py
src/db/init/: struct_creation.py
src/db/sqlite3/: main.py
src/dbapi/sqlite3/: main.py
tests/: constant_import_test.py
