[tool.ruff]
builtins = ["_"]
line-length = 79

[tool.poetry]
name = "iktxy-backend-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
numpy = "^2.1.0"
pandas = "^2.2.2"
sqlalchemy = "^2.0.32"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
